Prevent double-tap zoom on mobile devices when furiosly clicking stepping buttons

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -176,3 +176,13 @@
       white-space: nowrap;
   }
 }
+
+
+/* Prevent zoom on mobile devices when furiosly clicking buttons */
+button .v-btn {
+  touch-action: manipulation;
+}
+
+button .v-icon {
+  touch-action: manipulation;
+}
